--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,6 @@ ansible_ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAtte
 [defaults]
 # https://github.com/ansible/ansible/issues/56930 (to ignore group names with - and .)
 force_valid_group_names = ignore
-
 host_key_checking=False
 gathering = smart
 fact_caching = jsonfile
@@ -18,5 +17,9 @@ callbacks_enabled = profile_tasks,ara_default
 roles_path = roles:$VIRTUAL_ENV/usr/local/share/kubespray/roles:$VIRTUAL_ENV/usr/local/share/ansible/roles:/usr/share/kubespray/roles
 deprecation_warnings=False
 inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo, .creds, .gpg
+vault_password_file= ~/.vault_password_file
 [inventory]
 ignore_patterns = artifacts, credentials
+
+[privilege_escalation]
+become = True
